<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Create!</string>
    <!-- action bar items -->
    <string name="action_settings">Settings</string>

    <!-- main screen -->
    <string name="title_activity_local_stories">Browse Local</string>
    <string name="action_browse_online_stories">Browse Online Stories</string>
    <string name="action_create_new_story">Create New Story</string>
    <!-- read story on click contextual menu -->
    <string name="action_beginning">Start at Beginning</string>
    <string name="action_continue">Continue</string>
    <!-- edit story on long click contextual menu -->
    <string name="action_edit_story">Edit Story</string>
    <string name="action_delete_story">Delete Story</string>
    <string name="action_mirror_story">Mirror Story</string>

    <!-- random story selection -->
    <string name="action_random_story">Select Random Story</string>

    <!-- browse online -->
    <string name="title_activity_online_stories">Browse Online</string>
    <string name="action_new_search">New Search</string>
    <string name="action_search_online_stories">Search Online Stories</string>
    <string name="action_get_next_20">Next 20</string>
    <string name="action_save_online_story">Save Online Story</string>

    <!-- Edit Fragment -->
    <string name="title_activity_edit_fragment">Edit Fragment</string>
    <string name="edit_section1">Info</string>
    <string name="edit_section2">Edit</string>
    <string name="edit_section3">Preview</string>
    <string name="info_title_hint">Fragment Title</string>
    <string name="info_description_hint">Fragment Description</string>
    <string name="story_fragment">Story Fragment</string>
    <string name="story_title">Story Title</string>
    <string name="story_author">Story Author</string>

    <!-- Action bar strings for edit fragment activity -->
    <string name="action_edit_preview">Preview</string>
    <string name="action_edit_add_content">Add Content</string>
    <string name="action_edit_add_text">Text</string>
    <string name="action_edit_add_image">Image</string>
    <string name="action_edit_add_sound">Sound</string>
    <string name="action_edit_add_video">Video</string>
    <string name="action_edit_edit_choice">Edit Choice</string>
    <string name="action_edit_add_choice">Add Choice</string>
    <string name="action_edit_delete">Delete</string>
    <string name="action_edit_cancel">Cancel</string>
    <string name="pick_choice">Choose Choice</string>
    <string name="choice_list">Choice List</string>
    <string name="title_activity_edit_story">Edit Story</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_edit_edit_content">Edit Content</string>
    
     <!-- Readmode Related Strings -->
    <string name="action_return_to_previous_page">Return to Previous Page</string>
    <string name="action_return_to_beginning">Return to Beginning</string>
    <string name="action_help">Help</string>
    <string name="action_annotate">Annotate</string>
    <string name="annotate_medialist">Annotation List</string>
    <string name="title_activity_read_story">Read Story</string>
        
    <!-- String used in layout of edit story activity -->
    <string name="story_title_hint">Story Title</string>
    <string name="story_author_hint">Story Author</string>
    <string name="story_description_hint">Story Description</string>
    <string name="first_page">First Page: </string>
    <string name="first_page_empty">Not Set</string>
    <string name="story_fragments">Story Fragments</string>
    <string name="fragment_list">Story Fragment List</string>
    <string name="action_edit_add_fragment">Add Fragment</string>
    <string name="action_edit_edit_fragment">Edit Fragment</string>
    <string name="set_first_page">Set</string>

    <!-- Strings used in edit choice activity -->
    <string name="set_destination">Set</string>
    <string name="choice_flavour_hint">Choice Flavour</string>

    <!-- String used for passing intents -->
    <string name="story">Story</string>
    <string name="choice_position">Choice Position</string>
    <string name="story_is_new">Story Status</string>
    <string name="story_id">Story ID</string>
    <string name="fragment_is_new">Fragment Status</string>
    <string name="fragment_id">Fragment ID</string>
    <string name="choice_is_new">Choice Status</string>
    <string name="story_continue">Continue Story</string>
    <string name="action_publish">Publish</string>
    <string name="story_delete_toast">Story Deleted</string>
    <string name="choice_delete_toast">Choice Deleted</string>
    <string name="choice_saved_toast">Choice Saved</string>
    <string name="choice_not_saved_toast">Choice Not Saved</string>
    <string name="fragment_delete_toast">Fragment Deleted</string>
    <string name="cancel_toast">Cancelled</string>
    <string name="fragment_save_toast">Fragment Saved</string>
    <string name="story_save_toast">Story Saved</string>
    <string name="tab1">Tab 1</string>
    <string name="title_activity_edit_fragment_info">Edit Fragment</string>
    <string name="title_activity_edit_fragment_content">Edit Fragment</string>
    <string name="destination_id">Bundle FragmentId</string>
    <string name="title_activity_edit_fragment_choice">Edit Choice</string>
    <string name="choice">Choice</string>
    <string name="title_activity_preview_fragment">PreviewFragmentActivity</string>
    <string name="display_help">Help</string>

    <string name="story_URIs">URIs</string>
    <string name="action_edit_from_camera">Camera</string>
    <string name="action_edit_from_gallery">Gallery</string>
    <string name="action_edit_from_internal">Story Images</string>
    <string name="title_activity_add_annotation">AddAnnotationActivity</string>
    <string name="title_activity_edit_annotation">EditAnnotationActivity</string>
    <string name="annotation">Annotation</string>
    <string name="title_activity_view_annotation">ViewAnnotationActivity</string>
    <string name="action_edit_resize">Resize</string>

</resources>
