<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- return to beginning of story -->
    <item
        android:id="@+id/action_return_to_beginning"
        android:icon="@drawable/ic_action_go_to_today"
        android:showAsAction="ifRoom"
        android:title="@string/action_return_to_beginning"/>

    <!-- return to previous page according to history -->
    <item
        android:id="@+id/action_return_to_previous_page"
         android:icon="@drawable/ic_action_back"
        android:showAsAction="ifRoom"
        android:title="@string/action_return_to_previous_page"/>
    
    <!-- help function -->
    <item android:id="@+id/action_help"
          android:title="@string/action_help" 
          android:showAsAction="never" /> 

</menu>