<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <EditText
        android:id="@+id/edit_story_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/story_title_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_story_author"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/story_author_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_story_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/story_description_hint"
        android:inputType="text" />

    <ListView
        android:id="@+id/browse_online_activity_listview"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:clickable="true"
        android:longClickable="true" >
    </ListView>
</LinearLayout>
