<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditStoryActivity" >

    <LinearLayout
        android:id="@+id/edit_story_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_story_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/story_title_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_story_author"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/story_author_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_story_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/story_description_hint"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/edit_first_page"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/edit_set_first_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showFragmentSelection"
                android:text="@string/set_first_page" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>